Project-2[Makosa-Patryk] Version 1

--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,33 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Four card feature section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+    </style>
+    <link rel="stylesheet" href="/Project 2/four-card-feature/style.css" />
 
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <title>Four card feature section</title>
+  </head>
+  <body>
+    <div class="container-1">
+      <div class="par-1">
+        <p class="Item-1 Item">Reliable, efficient delivery</p>
+        <p class="Item-2 Item">Powered by Technology</p>
+        <p class="Item-3 Item">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </div>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-</body>
+      <div class="container-2">
+        <div class="box-1 box">
+          <img
+            class="picture"
+            src="/Project 2/four-card-feature/images/icon-supervisor.svg"
+            alt=""
+          />
+          <p class="Subtitle Items">Supervisor</p>
+          <p class="Item-4 Itemz">
+            Monitors activity to identify project roadblocks
+          </p>
+        </div>
+        <div class="box-2 box">
+          <img
+            class="picture"
+            src="/Project 2/four-card-feature/images/icon-team-builder.svg"
+            alt=""
+          />
+          <p class="Subtitle Items">Team Builder</p>
+          <p class="Itemz">
+            Scans our talent network to create the optimal team for your project
+          </p>
+        </div>
+        <div class="box-3 box">
+          <img
+            class="picture"
+            src="/Project 2/four-card-feature/images/icon-karma.svg"
+            alt=""
+          />
+          <p class="Subtitle Items">Karma</p>
+          <p class="Item-5 Itemz">
+            Regularly evaluates our talent to ensure quality
+          </p>
+        </div>
+        <div class="box-4 box">
+          <img
+            class="picture"
+            src="/Project 2/four-card-feature/images/icon-calculator.svg"
+            alt=""
+          />
+          <p class="Subtitle Items">Calculator</p>
+          <p class="Item-6 Itemz">
+            Uses data from past projects to provide better delivery estimates
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
