--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -37,8 +37,8 @@
 <div class="box2">
 
       <div class="t2">
-        <p>Team Builder</p>
-          Scans our talent network to create the optimal team for your project
+        <p class="titlebox">Team Builder</p>
+        <p class="textbox"> Scans our talent network to create the optimal team for your project</p>
        </div>
        <div class="icon2">
          <img class=z2 src="/Project 2/four-card-feature/images/icon-team-builder.svg">
@@ -48,9 +48,8 @@
 
 <div class="box3">
       <div class="t3">
-        <p>Karma</p>
-        Regularly evaluates our talent to ensure quality
-    </div>
+        <p class="titlebox">Karma</p>
+        <p class="textbox">Regularly evaluates our talent to ensure quality</p>  </div>
       <div class="icon3">
          <img class=z3 src="/Project 2/four-card-feature/images/icon-karma.svg">
       </div>
@@ -58,8 +57,8 @@
 
     <div class="box4">
       <div class="t4">
-        <p>Calculator</p>
-        Uses data from past projects to provide better delivery estimates
+        <p class="titlebox">Calculator</p>
+        <p class="textbox">Uses data from past projects to provide better delivery estimates</p>
    </div>
       <div class="icon4">
         <img class=z4 src="/Project 2/four-card-feature/images/icon-calculator.svg">
