3rd commit - not finished

--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
@@ -12,36 +11,42 @@
   <title>Four card feature section</title>
 </head>
 <body>
-  <div class="BIGcontainer">
-    <div class="header">
-      <h1>Reliable, efficient delivery<br>
-      <b>Powered by Technology</b></h1>
+  <div class="BigColumn">
+    <div>
+      <div class="header">
+        <h1>Reliable, efficient delivery<br>
+        <b>Powered by Technology</b></h1>
+      </div>
+      <div class="smaller-text">
+        <p>Our Artificial Intelligence powered tools use millions of project <br>
+        data points to ensure that your project is successful</p>
+      </div>
+      <div class="Boxcontainer row">
+        <div class="box borderGreen " >
+            <h3>Supervisor</h3>
+                <p> Monitors activity to identify project roadblocks</p>
+                <img class="picture" src="./images/icon-supervisor.svg">
+        </div>
+        <div>
+            <div class="box borderRed ">
+            <h3>Team Builder</h3>
+                <p>Scans our talent network to create the optimal team for your project</p>
+                <img class="picture" src="./images/icon-team-builder.svg">
+            </div>
+        
+            <div class="box borderOrange ">
+            <h3>Karma</h3>
+                <p> Regularly evaluates our talent to ensure quality</p>
+                <img class="picture"  src="./images/icon-karma.svg">
+            </div>
+          </div>
+          <div class="box borderBlue ">
+            <h3>Calculator</h3>
+                <p>Uses data from past projects to provide better delivery estimates</p>
+                <img class="picture"  src="./images/icon-calculator.svg">
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="smaller-text">
-       <p>Our Artificial Intelligence powered tools use millions of project <br>
-       data points to ensure that your project is successful</p>
-    </div>
-    <div class="Boxcontainer row">
-      <div class="box borderGreen">
-          <h3>Supervisor</h3>
-              <p> Monitors activity to identify project roadblocks</p>
-              <img class="picture" src="./images/icon-supervisor.svg">
-      </div>
-      <div class="box borderRed column">
-          <h3>Team Builder</h3>
-              <p>Scans our talent network to create the optimal team for your project</p>
-              <img class="picture" src="./images/icon-team-builder.svg">
-      </div>
-      <div class="box borderOrange column">
-          <h3>Karma</h3>
-              <p> Regularly evaluates our talent to ensure quality</p>
-              <img class="picture"  src="./images/icon-karma.svg">
-      </div>
-      <div class="box borderBlue column">
-          <h3>Calculator</h3>
-              <p>Uses data from past projects to provide better delivery estimates</p>
-              <img class="picture"  src="./images/icon-calculator.svg">
-      </div>
-  </div>
 </body>
 </html>
