--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Four card feature section</title>
-
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <h1>Reliable, efficient delivery</h1>
+  <h2>Powered by Technology</h2>
+  <h3>Our Artificial Intelligence powered tools use millions of project data points
+    to ensure that your project is successful</h3>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  <div class="container">
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    <div class="box first-box">
+      <h4>Supervisor</h4>
+      <p>Monitors activity to identify project roadblocks</p>
+      <img src="images/icon-supervisor.svg">
+    </div>
+    <div>
+      <div class="box second-box">
+        <h4>Team Builder</h4>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <img src="images/icon-team-builder.svg">
+      </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+      <div class="box third-box">
+        <h4>Karma</h4>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <img src="images/icon-karma.svg">
+      </div>
+    </div>
+    <div class="box fourth-box">
+      <h4>Calculator</h4>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="images/icon-calculator.svg">
+    </div>
+  </div>
 </body>
+
 </html>
