--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -24,7 +24,7 @@
       <h1>Reliable, efficient delivery</h1>
       <h2>Powered by Technology</h2>
 
-      <p class="main">
+      <p class="main-heading">
         Our Artificial Intelligence powered tools use millions of project data
         points to ensure that your project is successful
       </p>
