--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -25,21 +25,25 @@
       <div class="box-1 box">
         <p class="subtitle">Supervisor</p>
         <p class="item-4">Monitors activity to identify project roadblocks</p>
+        <img class="picture" src="images/icon-supervisor.svg">
       </div>  
 
       <div class="box-2 box">
         <p class="subtitle">Calculator</p>
         <p class="item-4">Uses data from past projects to provide better delivery estimates</p>
+        <img class="picture" src="images/icon-calculator.svg">
       </div>
 
       <div class="box-3 box">
         <p class="subtitle">Team Builder</p>
         <p class="item-4">Scans our talent network to create the optimal team for your project</p>
+        <img class="picture" src="images/icon-team-builder.svg">
       </div>  
 
       <div class="box-4 box">
         <p class="subtitle">Karma</p>
         <p class="item-4">Regularly evaluates our talent to ensure quality</p>
+        <img class="picture" src="images/icon-karma.svg">
       </div>
     </div>
 </body>
