--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -11,6 +11,18 @@
 
 </head>
 <body>
+
+
+
+  <div class="wall">
+
+
+
+ 
+
+
+
+
   <div class="tekst">
 
   <p>Reliable, efficient delivery</p>
@@ -63,6 +75,9 @@
       <div class="icon4">
         <img class=z4 src="/Project 2/four-card-feature/images/icon-calculator.svg">
       </div>
+</div>
+
+
 </div>
 
 
