--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -25,10 +25,10 @@
 
   <div class="tekst">
 
-  <p>Reliable, efficient delivery</p>
-  <p> Powered by Technology</p>
+  <p id="slim">Reliable, efficient delivery</p>
+  <p id="thick"> Powered by Technology</p>
 
- <p>Our Artificial Intelligence powered tools use millions of project data points 
+ <p id="small">Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful</p>
 
   </div>
