--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -14,66 +14,71 @@
 
 
 
-  <div class="wall">
+<div class="wall">
+
+
+            <div class="tekst">
+
+            <p id="slim">Reliable, efficient delivery</p>
+            <p id="thick"> Powered by Technology</p>
+
+          <p id="small">Our Artificial Intelligence powered tools use millions of project data points 
+            to ensure that your project is successful</p>
+
+            </div>
+
+  <div class="boxes">
+  
+      
+        <div class="box1"> 
+
+        <div class="t1">
+            <p class="titlebox">Supervisor</p>
+            <p class="textbox">Monitors activity to identify project roadblocks </p>
+        </div>
+        <div class="icon1">
+            <img class=z1 src="/Project 2/four-card-feature/images/icon-supervisor.svg">
+        </div>
+        </div>
+
+        <div class="middle-box">
+
+  
+          <div class="box2">
+
+        <div class="t2">
+          <p class="titlebox">Team Builder</p>
+          <p class="textbox"> Scans our talent network to create the optimal team for your project</p>
+        </div>
+        <div class="icon2">
+          <img class=z2 src="/Project 2/four-card-feature/images/icon-team-builder.svg">
+        </div>
+        </div>
+
+
+        <div class="box3">
+        <div class="t3">
+          <p class="titlebox">Karma</p>
+          <p class="textbox">Regularly evaluates our talent to ensure quality</p>  
+        </div>
+        <div class="icon3">
+          <img class=z3 src="/Project 2/four-card-feature/images/icon-karma.svg">
+        </div>
+         </div>
 
 
 
- 
 
+        </div>
 
-
-
-  <div class="tekst">
-
-  <p id="slim">Reliable, efficient delivery</p>
-  <p id="thick"> Powered by Technology</p>
-
- <p id="small">Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful</p>
-
-  </div>
- 
-
-<div class="box1"> 
-
-    <div class="t1">
-        <p class="titlebox">Supervisor</p>
-        <p class="textbox">Monitors activity to identify project roadblocks </p>
-    </div>
-    <div class="icon1">
-        <img class=z1 src="/Project 2/four-card-feature/images/icon-supervisor.svg">
-    </div>
-</div>
-
-
-<div class="box2">
-
-      <div class="t2">
-        <p class="titlebox">Team Builder</p>
-        <p class="textbox"> Scans our talent network to create the optimal team for your project</p>
-       </div>
-       <div class="icon2">
-         <img class=z2 src="/Project 2/four-card-feature/images/icon-team-builder.svg">
-      </div>
-</div>
-
-
-<div class="box3">
-      <div class="t3">
-        <p class="titlebox">Karma</p>
-        <p class="textbox">Regularly evaluates our talent to ensure quality</p>  </div>
-      <div class="icon3">
-         <img class=z3 src="/Project 2/four-card-feature/images/icon-karma.svg">
-      </div>
-</div>
-
-    <div class="box4">
-      <div class="t4">
-        <p class="titlebox">Calculator</p>
-        <p class="textbox">Uses data from past projects to provide better delivery estimates</p>
-   </div>
-      <div class="icon4">
-        <img class=z4 src="/Project 2/four-card-feature/images/icon-calculator.svg">
+        <div class="box4">
+          <div class="t4">
+            <p class="titlebox">Calculator</p>
+            <p class="textbox">Uses data from past projects to provide better delivery estimates</p>
+          </div>
+          <div class="icon4">
+            <img class=z4 src="/Project 2/four-card-feature/images/icon-calculator.svg">
+          </div>
       </div>
 </div>
 
