--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -37,7 +37,7 @@
             <p class="textbox">Monitors activity to identify project roadblocks </p>
         </div>
         <div class="icon1">
-            <img class=z1 src="/Project 2/four-card-feature/images/icon-supervisor.svg">
+            <img class=z1 src="../four-card-feature/images/icon-supervisor.svg">
         </div>
         </div>
 
@@ -51,7 +51,7 @@
           <p class="textbox"> Scans our talent network to create the optimal team for your project</p>
         </div>
         <div class="icon2">
-          <img class=z2 src="/Project 2/four-card-feature/images/icon-team-builder.svg">
+          <img class=z2 src="../four-card-feature/images/icon-team-builder.svg">
         </div>
         </div>
 
@@ -62,7 +62,7 @@
           <p class="textbox">Regularly evaluates our talent to ensure quality</p>  
         </div>
         <div class="icon3">
-          <img class=z3 src="/Project 2/four-card-feature/images/icon-karma.svg">
+          <img class=z3 src="../four-card-feature/images/icon-karma.svg">
         </div>
          </div>
 
@@ -77,7 +77,7 @@
             <p class="textbox">Uses data from past projects to provide better delivery estimates</p>
           </div>
           <div class="icon4">
-            <img class=z4 src="/Project 2/four-card-feature/images/icon-calculator.svg">
+            <img class=z4 src="../four-card-feature/images/icon-calculator.svg">
           </div>
       </div>
 </div>
