95% finished, waiting for consult SMAJDA

--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -21,13 +21,13 @@
         <p>Our Artificial Intelligence powered tools use millions of project <br>
         data points to ensure that your project is successful</p>
       </div>
-      <div class="Boxcontainer row">
+      <div class="Boxcontainer">
         <div class="box borderGreen " >
             <h3>Supervisor</h3>
                 <p> Monitors activity to identify project roadblocks</p>
                 <img class="picture" src="./images/icon-supervisor.svg">
         </div>
-        <div>
+        <div class="insideBox">
             <div class="box borderRed">
             <h3>Team Builder</h3>
                 <p>Scans our talent network to create the optimal team for your project</p>
