--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -20,7 +20,7 @@
             <div class="tekst">
 
             <p id="slim">Reliable, efficient delivery</p>
-            <p id="thick"> Powered by Technology</p>
+            <p id="thick"> <b> Powered by Technology </b></p>
 
           <p id="small">Our Artificial Intelligence powered tools use millions of project data points 
             to ensure that your project is successful</p>
@@ -33,8 +33,8 @@
         <div class="box1"> 
 
         <div class="t1">
-            <p class="titlebox">Supervisor</p>
-            <p class="textbox">Monitors activity to identify project roadblocks </p>
+            <p class="titlebox"> <b>Supervisor</b> </p>
+            <p class="textbox"> Monitors activity to identify project roadblocks </p>
         </div>
         <div class="icon1">
             <img class=z1 src="../four-card-feature/images/icon-supervisor.svg">
@@ -47,7 +47,7 @@
           <div class="box2">
 
         <div class="t2">
-          <p class="titlebox">Team Builder</p>
+          <p class="titlebox"> <b>Team Builder</b> </p>
           <p class="textbox"> Scans our talent network to create the optimal team for your project</p>
         </div>
         <div class="icon2">
@@ -58,7 +58,7 @@
 
         <div class="box3">
         <div class="t3">
-          <p class="titlebox">Karma</p>
+          <p class="titlebox"> <b>Karma</b> </p>
           <p class="textbox">Regularly evaluates our talent to ensure quality</p>  
         </div>
         <div class="icon3">
@@ -73,7 +73,7 @@
 
         <div class="box4">
           <div class="t4">
-            <p class="titlebox">Calculator</p>
+            <p class="titlebox"> <b>Calculator </b> </p>
             <p class="textbox">Uses data from past projects to provide better delivery estimates</p>
           </div>
           <div class="icon4">
