--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  
-  <title>News homepage</title>
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
+</style>
+<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+<link rel="stylesheet" href="style.css">
+<title>News homepage</title>
 </head>
 <body>
- <nav>
-  <div class="logo"><img src="" alt=""></div>
-  <div>
-  <ul>
-    <li>Home</li>
-    <li>New</li>
-    <li>Popular</li>
-    <li>Trending</li>
-    <li>Categories</li>
-  </ul>
+<div class="navigation">
+  <nav>
+    <div class="logo"><img alt="" src="./assets/images/logo.svg"></div>
+    <div class="nav-content">
+    <div class="hamburger"><i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i></div>
+    <ul class="nav-list nav-desktop">
+      <li>Home</li>
+      <li>New</li>
+      <li>Popular</li>
+      <li>Trending</li>
+      <li>Categories</li>
+    </ul>
+  </div>
+  </nav>
 </div>
-</nav>
-  
+<main class="main-content">
 <h1>The Bright Future of Web 3.0?</h1>
-We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
-But is it really fulfilling its promise?
-Read more
+<p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the
+  people.But is it really fulfilling its promise? </p>
+<p>Read more</p>
 <h2>New </h2>
-Hydrogen VS Electric Cars
-Will hydrogen-fueled cars ever catch up to EVs?
-The Downsides of AI Artistry
-What are the possible adverse effects of on-demand AI image generation?
-Is VC Funding Drying Up?
-Private funding by VC firms is down 50% YOY. We take a look at what that means.
-01
+<div class="content-box-1 box">
+  <h3>Hydrogen VS Electric Cars</h3>
+  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+</div>
+<div class="content-box-3 box">
+  <h3>The Downsides of AI Artistry</h3>
+  <p>What are the possible adverse effects of on-demand AI image generation?</p>
+</div>
+<div class="content-box-3 box">
+  <h3>Is VC Funding Drying Up?</h3>
+  <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+</div>
+<p class="number">01</p>
 <h3>Reviving Retro PCs</h3>
-What happens when old PCs are given modern upgrades?
-02
+<p>What happens when old PCs are given modern upgrades?</p>
+<p class="number">02</p>
 <h3>Top 10 Laptops of 2022</h3>
-Our best picks for various needs and budgets.
-03
+<p>Our best picks for various needs and budgets.</p>
+<p class="number">03</p>
 <h3> The Growth of Gaming</h3>
-How the pandemic has sparked fresh opportunities.
-  
+<p>How the pandemic has sparked fresh opportunities.</p>
+</main>
+<script src="https://kit.fontawesome.com/c1e3cd0742.js" crossorigin="anonymous"></script>
 </body>
 </html>
