--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -1,51 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+
+  <script src="https://kit.fontawesome.com/c1e3cd0742.js" crossorigin="anonymous"></script>
+
   <title>News homepage</title>
 
 </head>
+
 <body>
+  <main>
+    <header>
+      <div class="page-icon">W.</div>
+      <nav>
+        <i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
+        <!-- <ul>
+        <li>Home</li>
+        <li>New</li>
+        <li>Popular</li>
+        <li>rending</li>
+        <li>Categories</li>
+      </ul> -->
+      </nav>
+    </header>
+    <main>
+      <img class="image-mobile" src="assets/images/image-web-3-mobile.jpg">
+      <img class="image-desktop" src="assets/images/image-web-3-desktop">
+      <h1>The Bright Future of Web 3.0?</h1>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of
+        the people.
+        But is it really fulfilling its promise?
+      <p>
 
-  The Bright Future of Web 3.0?
+        <input type="button" value="Read more">
+      <section class="new">
+        <h2>New</h2>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+        <h3>Hydrogen VS Electric Cars</h3>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        <hr>
 
-  Read more
+        <h3>The Downsides of AI Artistry</h3>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+        <hr>
 
-  New 
+        <h3>Is VC Funding Drying Up?</h3>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </section>
+    </main>
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
+    <aside>
+      <section class="bottom-articles">
+        <img src="assets/images/image-retro-pcs.jpg">
+        <div>
+          <p>01</p>
+          Reviving Retro PCs
+          What happens when old PCs are given modern upgrades?
+        </div>
+      </section>
+      <section class="bottom-articles">
+        <img class="" src="assets/images/image-top-laptops.jpg">
+        <div>
+          <p>02</p>
+          Top 10 Laptops of 2022
+          Our best picks for various needs and budgets.
+        </div>
+      </section>
+      <section class="bottom-articles">
+        <img src="assets/images/image-gaming-growth.jpg">
+        <div>
+          <p>03</p>
+          The Growth of Gaming
+          How the pandemic has sparked fresh opportunities.
+        </div>
+      </section>
+    </aside>
 </body>
+
 </html>
