--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>News homepage</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png" />
+		<script
+			src="https://kit.fontawesome.com/c1e3cd0742.js"
+			crossorigin="anonymous"></script>
 
-</head>
-<body>
+		<link rel="stylesheet" href="./style.css" />
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+		<title>News homepage</title>
+	</head>
+	<body>
+		<div class="container">
+			<nav class="box">
+				<img src="./assets/images/logo.svg" alt="" class="w" />
 
-  The Bright Future of Web 3.0?
+				<div class="menu">
+					<i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
+				</div>
+			</nav>
+			<div class="box img-hero"></div>
+			<div class="box bright">
+        <p class="one">The Bright Future of Web 3.0?</p>
+        <p class="two">We dive
+          into the next evolution of the web that claims to put the power of the
+          platforms back into the hands of the people. But is it really fulfilling its
+          promise?</p>
+        <button>Read more</button>
+      </div>
+			<div class="box new"></div>
+			<div class="box image-pc"></div>
+			<div class="box image-lap"></div>
+			<div class="box image-game"></div>
+		</div>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-</body>
+		<!-- Home New Popular Trending Categories    New Hydrogen VS Electric Cars Will hydrogen-fueled cars
+		ever catch up to EVs? The Downsides of AI Artistry What are the possible
+		adverse effects of on-demand AI image generation? Is VC Funding Drying Up?
+		Private funding by VC firms is down 50% YOY. We take a look at what that
+		means. 01 Reviving Retro PCs What happens when old PCs are given modern
+		upgrades? 02 Top 10 Laptops of 2022 Our best picks for various needs and
+		budgets. 03 The Growth of Gaming How the pandemic has sparked fresh
+		opportunities. -->
+	</body>
 </html>
