--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -5,47 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
+  </style>
+  <link rel="stylesheet" href="./style.css" />
+  <script src="https://kit.fontawesome.com/c1e3cd0742.js" crossorigin="anonymous"></script>
   <title>News homepage</title>
-
 </head>
 <body>
+  <header>
+    <div class="page-icon">W.</div>
+    <nav>
+      <i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
+      <!-- <p>Home</p>
+      <p>New</p>
+      <p>Popular</p>
+      <p>Trending</p>
+      <p>Categories</p> -->
+    </nav>
+  </header>
+  <main class="main">
+    <img class="pictureTOP" src="assets/images/image-web-3-mobile.jpg">
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+    <h1><b>The Bright Future of Web 3.0?</b></h1>
+    <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+    But is it really fulfilling its promise?</p>
+  <div class="READMORE"></div>>
+    <p>Read more</p>
+<div class="NEW">
+  <h3>New</h3>
 
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
+  <h4>Hydrogen VS Electric Cars</h4>
   Will hydrogen-fueled cars ever catch up to EVs?
 
-  The Downsides of AI Artistry
+ <h4> The Downsides of AI Artistry</h4>
   What are the possible adverse effects of on-demand AI image generation?
 
-  Is VC Funding Drying Up?
+  <h4>Is VC Funding Drying Up?</h4>
   Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
+</div>
+</main>
+  <section class="section">
+  <img class="picturebox" src="assets/images/image-retro-pcs.jpg">
+  01 <br>
+  <b>Reviving Retro PCs</b><br>
   What happens when old PCs are given modern upgrades?
-
+  <img class="picturebox" src="assets/images/image-top-laptops.jpg">
   02
-  Top 10 Laptops of 2022
+  <b>Top 10 Laptops of 2022</b>
   Our best picks for various needs and budgets.
-
+  <img class="picturebox" src="assets/images/image-gaming-growth.jpg">
   03
-  The Growth of Gaming
+  <b>The Growth of Gaming</b>
   How the pandemic has sparked fresh opportunities.
-  
+  </section>
 </body>
 </html>
+
+
