--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -1,51 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>News homepage</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-</head>
-<body>
+    <title>News homepage</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap");
+    </style>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <div class="wLogo">
+        <img src="./assets/images/logo.svg" />
+      </div>
+      <div class="menu">Home New Popular Trending Categories</div>
+    </header>
+    <main>
+      
+        <img class ="wLogo" src="./assets/images/image-web-3-desktop.jpg"/>
+        
+        <section class="textLeft">
+        <h1>The Bright Future of Web 3.0?</h1>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+        <p>
+          We dive into the next evolution of the web that claims to put the
+          power of the platforms back into the hands of the people. But is it
+          really fulfilling its promise?
+        </p>
 
-  The Bright Future of Web 3.0?
+        <button>Read more</button>
+      </section>
+      <section class="textRight">
+        <h2>New</h2>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+        <h3>Hydrogen VS Electric Cars</h3>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
 
-  Read more
+        <h3>The Downsides of AI Artistry</h3>
+        <p>
+          What are the possible adverse effects of on-demand AI image
+          generation?
+        </p>
 
-  New 
+        <h3>Is VC Funding Drying Up?</h3>
+        <p>
+          Private funding by VC firms is down 50% YOY. We take a look at what
+          that means.
+        </p>
+      </section>
+    </main>
+    <footer>
+      <div class="number">01</div>
+      <div class="footerTitle">Reviving Retro PCs</div>
+      <p>What happens when old PCs are given modern upgrades?</p>
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
+      <div class="number">02</div>
+      <div class="footerTitle">Top 10 Laptops of 2022</div>
+      <p>Our best picks for various needs and budgets.</p>
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-</body>
+      <div class="number">03</div>
+      <div class="footerTitle">The Growth of Gaming</div>
+      <p>How the pandemic has sparked fresh opportunities.</p>
+    </footer>
+  </body>
 </html>
