--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -1,59 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
-</style>
-<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-<link rel="stylesheet" href="style.css">
-<title>News homepage</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
+  </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <title>News homepage</title>
 </head>
 <body>
-<div class="navigation">
-  <nav>
-    <div class="logo"><img alt="" src="./assets/images/logo.svg"></div>
-    <div class="nav-content">
-    <div class="hamburger"><i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i></div>
-    <ul class="nav-list nav-desktop">
-      <li>Home</li>
-      <li>New</li>
-      <li>Popular</li>
-      <li>Trending</li>
-      <li>Categories</li>
-    </ul>
-  </div>
-  </nav>
-</div>
-<main class="main-content">
-<h1>The Bright Future of Web 3.0?</h1>
-<p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the
-  people.But is it really fulfilling its promise? </p>
-<p>Read more</p>
-<h2>New </h2>
-<div class="content-box-1 box">
-  <h3>Hydrogen VS Electric Cars</h3>
-  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-</div>
-<div class="content-box-3 box">
-  <h3>The Downsides of AI Artistry</h3>
-  <p>What are the possible adverse effects of on-demand AI image generation?</p>
-</div>
-<div class="content-box-3 box">
-  <h3>Is VC Funding Drying Up?</h3>
-  <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-</div>
-<p class="number">01</p>
-<h3>Reviving Retro PCs</h3>
-<p>What happens when old PCs are given modern upgrades?</p>
-<p class="number">02</p>
-<h3>Top 10 Laptops of 2022</h3>
-<p>Our best picks for various needs and budgets.</p>
-<p class="number">03</p>
-<h3> The Growth of Gaming</h3>
-<p>How the pandemic has sparked fresh opportunities.</p>
-</main>
-<script src="https://kit.fontawesome.com/c1e3cd0742.js" crossorigin="anonymous"></script>
+  <div class="navigation">
+    <nav>
+      <div class="logo"><img alt="" src="./assets/images/logo.svg"></div>
+      <div class="nav-content">
+      <div class="hamburger"><i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i></div>
+      <ul class="nav-list nav-desktop">
+        <li>Home</li>
+        <li>New</li>
+        <li>Popular</li>
+        <li>Trending</li>
+        <li>Categories</li>
+      </ul>
+    </div>
+    </nav>
+  <main>
+    <div class="main-picture">
+      <img class="picture-1 picture" src="assets/images/image-web-3-desktop.jpg" alt="">
+    </div>
+    <div class="main-content">
+      <h1>The Bright Future of Web 3.0?</h1>
+    </div>
+    <div class="secondary-content">
+      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of
+        the
+        people.But is it really fulfilling its promise? </p>
+      <p>Read more</p>
+    </div>
+    <div class="sidebar">
+      <h2>New</h2>
+      <div class="content-box-1 box">
+        <h3>Hydrogen VS Electric Cars</h3>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      </div>
+      <div class="content-box-2 box">
+        <h3>The Downsides of AI Artistry</h3>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+      </div>
+      <div class="content-box-3 box">
+        <h3>Is VC Funding Drying Up?</h3>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </div>
+    </div>
+    <div class="bottom-main-content-1">
+      <img class="picture-2 picture" src="assets/images/image-retro-pcs.jpg" alt="">
+      <p class="number">01</p>
+      <h3>Reviving Retro PCs</h3>
+      <p>What happens when old PCs are given modern upgrades?</p>
+    </div>
+    <div class="bottom-main-content-2">
+      <img class="picture-3 picture" src="assets/images/image-top-laptops.jpg" alt="">
+      <p class="number">02</p>
+      <h3>Top 10 Laptops of 2022</h3>
+      <p>Our best picks for various needs and budgets.</p>
+    </div>
+    <div class="bottom-main-content-3">
+      <img class="picture-4 picture" src="assets/images/image-gaming-growth.jpg" alt="">
+      <p class="number">03</p>
+      <h3> The Growth of Gaming</h3>
+      <p>How the pandemic has sparked fresh opportunities.</p>
+    </div>
+    <script src="https://kit.fontawesome.com/c1e3cd0742.js" crossorigin="anonymous"></script>
+  </main>
 </body>
 </html>
