project3 desktop finished

--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -66,25 +66,25 @@
         <div class="bottxt">
           <h4>01</h4>
           <h5>Reviving Retro PCs</h5>
-          <p>What happens when old PCs are given modern upgrades?</p>
+          <p class="botp">What happens when old PCs are given modern upgrades?</p>
         </div>
         <img
           class="botpictures"
-          src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\image-retro-pcs.jpg"
+          src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\image-top-laptops.jpg"
         />
         <div class="bottxt">
-          <h4>01</h4>
-          <h5>Reviving Retro PCs</h5>
-          <p>What happens when old PCs are given modern upgrades?</p>
+          <h4>02</h4>
+          <h5>Top 10 Laptops of 2022</h5>
+          <p class="botp">Our best picks for various needs and budgets.</p>
         </div>
         <img
           class="botpictures"
-          src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\image-retro-pcs.jpg"
+          src="C:\Users\kdolo\Desktop\zadanie 1\jfddr8-project-html-css\Project 3\assets\images\image-gaming-growth.jpg"
         />
         <div class="bottxt">
-          <h4>01</h4>
-          <h5>Reviving Retro PCs</h5>
-          <p>What happens when old PCs are given modern upgrades?</p>
+          <h4>03</h4>
+          <h5>The Growth of Gaming</h5>
+          <p class="botp">How the pandemic has sparked fresh opportunities.</p>
         </div>
       </div>
     </div>
