--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -66,7 +66,9 @@
         <div class="bottxt">
           <h4>01</h4>
           <h5>Reviving Retro PCs</h5>
-          <p class="botp">What happens when old PCs are given modern upgrades?</p>
+          <p class="botp">
+            What happens when old PCs are given modern upgrades?
+          </p>
         </div>
         <img
           class="botpictures"
