--- a/product-card/index.html
+++ b/product-card/index.html
@@ -7,21 +7,32 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Product preview card component</title>
-
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+<div class="product">
 
-  Preview
+<div class="image"><img class="zdiecie" src="image-product-desktop.jpg"></div>
 
-  Gabrielle Essence Eau De Parfum
+<div class="part2">
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+<div class="perfum">PERFUME</div>
 
-  $149.99
-  $169.99
+<div class="akapit2"><p>Gabariele</p><p>Essence Eau</p><p>De Parfum</p></div>
 
-  Add to Cart
+<div class="akapit3"><p>A floral, solar and voluptuous</p><p>interpretation composed by</p><p>Olivier Polge, Perfumer-Creator</p><p>for the House of CHANEL</p></div>
+
+<div class="prize1">$149.99</div>
+<div class="prize2"><h6><s>$169.99</s></h6></div>
+
+<input class="submit" type="submit" value="Add to Cart">
+
+</div>
+
+
+</div>
+ 
   
 </body>
 </html>
