--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -19,35 +19,76 @@
 	</head>
 	<body>
 		<div class="container">
-			<nav class="box">
+			<nav>
 				<img src="./assets/images/logo.svg" alt="" class="w" />
 
 				<div class="menu">
 					<i class="fa-sharp fa-solid fa-bars mobile-hamburger"></i>
 				</div>
 			</nav>
-			<div class="box img-hero"></div>
-			<div class="box bright">
-        <p class="one">The Bright Future of Web 3.0?</p>
-        <p class="two">We dive
-          into the next evolution of the web that claims to put the power of the
-          platforms back into the hands of the people. But is it really fulfilling its
-          promise?</p>
-        <button>Read more</button>
-      </div>
-			<div class="box new"></div>
-			<div class="box image-pc"></div>
-			<div class="box image-lap"></div>
-			<div class="box image-game"></div>
+			<div class="img-hero"></div>
+			<div class="bright">
+				<p class="one">The Bright Future of Web 3.0?</p>
+			</div>
+			<div class="bright2"><p class="two">
+				We dive into the next evolution of the web that claims to put the
+				power of the platforms back into the hands of the people. But is it
+				really fulfilling its promise?
+			</p>
+			<button>Read more</button></div>
+			<div class="new">
+				<p class="new-title">New</p>
+				<p class="new-first">New Hydrogen VS Electric Cars</p>
+				<p class="new-second">
+					Will hydrogen-fueled cars ever catch up to EVs?
+				</p>
+				<p class="new-first">The Downsides of AI Artistry</p>
+				<p class="new-second">
+					What are the possible adverse effects of on-demand AI image
+					generation?
+				</p>
+				<p class="new-first">Is VC Funding Drying Up?</p>
+				<p class="new-second">
+					Private funding by VC firms is down 50% YOY. We take a look at what
+					that means.
+				</p>
+			</div>
+			<div class="box">
+				<div class="img image-pc">
+					<img src="./assets/images/image-retro-pcs.jpg" alt="">
+				</div>
+				<div class="text">
+					<p class="number">01</p>
+					<p class="img-title">Reviving Retro PCs</p>
+					<p class="img-text">
+						What happens when old PCs are given modern upgrades?
+					</p>
+				</div>
+			</div>
+			<div class="box">
+				<div class="img image-lap">
+					<img src="./assets/images/image-top-laptops.jpg" alt="">
+				</div>
+				<div class="text">
+					<p class="number">02</p>
+					<p class="img-title">Top 10 Laptops of 2022</p>
+					<p class="img-text">Our best picks for various needs and budgets.</p>
+				</div>
+			</div>
+			<div class="box">
+				<div class="img image-game">
+					<img src="./assets/images/image-gaming-growth.jpg" alt="gaming pad">
+				</div>
+				<div class="text">
+					<p class="number">03</p>
+					<p class="img-title">The Growth of Gaming</p>
+					<p class="img-text">
+						How the pandemic has sparked fresh opportunities.
+					</p>
+				</div>
+			</div>
 		</div>
 
-		<!-- Home New Popular Trending Categories    New Hydrogen VS Electric Cars Will hydrogen-fueled cars
-		ever catch up to EVs? The Downsides of AI Artistry What are the possible
-		adverse effects of on-demand AI image generation? Is VC Funding Drying Up?
-		Private funding by VC firms is down 50% YOY. We take a look at what that
-		means. 01 Reviving Retro PCs What happens when old PCs are given modern
-		upgrades? 02 Top 10 Laptops of 2022 Our best picks for various needs and
-		budgets. 03 The Growth of Gaming How the pandemic has sparked fresh
-		opportunities. -->
+		<!-- Home New Popular Trending Categories -->
 	</body>
 </html>
