--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +9,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>News homepage</title>
-
 </head>
-
 <body>
-
+  <div>
   <div class="navigation">
     <nav>
       <div class="logo"><img alt="" src="./assets/images/logo.svg"></div>
@@ -37,10 +34,13 @@
       <h1>The Bright Future of Web 3.0?</h1>
     </div>
     <div class="secondary-content">
-      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of
-        the
-        people.But is it really fulfilling its promise? </p>
-      <p>Read more</p>
+      <p class="p-secondary-content">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of
+        the people.But is it really fulfilling its promise? </p>
+       <div class="button-overlay">
+        <div class="button">
+          <p class="p-read-more">Read more</p>
+          </div>
+        </div>  
     </div>
     <div class="sidebar">
       <h2>New</h2>
@@ -48,36 +48,50 @@
         <h3>Hydrogen VS Electric Cars</h3>
         <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
       </div>
+      <div class = "bar"></div>
       <div class="content-box-2 box">
         <h3>The Downsides of AI Artistry</h3>
         <p>What are the possible adverse effects of on-demand AI image generation?</p>
       </div>
+      <div class = "bar"></div>
       <div class="content-box-3 box">
         <h3>Is VC Funding Drying Up?</h3>
         <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
       </div>
     </div>
     <div class="bottom-main-content-1">
-      <img class="picture-2 picture" src="assets/images/image-retro-pcs.jpg" alt="">
+      <img class="picture-2 bottom-picture" src="assets/images/image-retro-pcs.jpg" alt="">
+      <div class="footer-box">
       <p class="number">01</p>
       <h3>Reviving Retro PCs</h3>
       <p>What happens when old PCs are given modern upgrades?</p>
+      </div>
     </div>
     <div class="bottom-main-content-2">
-      <img class="picture-3 picture" src="assets/images/image-top-laptops.jpg" alt="">
+      <img class="picture-3 bottom-picture" src="assets/images/image-top-laptops.jpg" alt="">
+      <div class="footer-box">
       <p class="number">02</p>
       <h3>Top 10 Laptops of 2022</h3>
       <p>Our best picks for various needs and budgets.</p>
+      </div>
     </div>
     <div class="bottom-main-content-3">
-      <img class="picture-4 picture" src="assets/images/image-gaming-growth.jpg" alt="">
+      <img class="picture-4 bottom-picture" src="assets/images/image-gaming-growth.jpg" alt="">
+      <div class="footer-box">
       <p class="number">03</p>
       <h3> The Growth of Gaming</h3>
       <p>How the pandemic has sparked fresh opportunities.</p>
+      </div>
     </div>
     <script src="https://kit.fontawesome.com/c1e3cd0742.js" crossorigin="anonymous"></script>
-
+  </div>
   </main>
 </body>
-
 </html>
+
+
+
+
+
+
+
