--- a/Project 3/index2.html
+++ b/Project 3/index2.html
@@ -7,7 +7,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
   </style>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css2">
   <title>News homepage</title>
 </head>
 <body>
@@ -25,7 +25,6 @@
       </ul>
     </div>
     </nav>
-  </div>
   <main>
     <div class="main-picture">
       <img class="picture-1 picture" src="assets/images/image-web-3-desktop.jpg" alt="">
@@ -59,7 +58,7 @@
         <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
       </div>
     </div>
-    <div class="bottom-main-content" id="bottom-main-content-1">
+    <div class="bottom-main-content-1">
       <img class="picture-2 bottom-picture" src="assets/images/image-retro-pcs.jpg" alt="">
       <div class="footer-box">
       <p class="number">01</p>
@@ -67,7 +66,7 @@
       <p>What happens when old PCs are given modern upgrades?</p>
       </div>
     </div>
-    <div class="bottom-main-content" id="bottom-main-content-2">
+    <div class="bottom-main-content-2">
       <img class="picture-3 bottom-picture" src="assets/images/image-top-laptops.jpg" alt="">
       <div class="footer-box">
       <p class="number">02</p>
@@ -75,7 +74,7 @@
       <p>Our best picks for various needs and budgets.</p>
       </div>
     </div>
-    <div class="bottom-main-content" id="bottom-main-content-3">
+    <div class="bottom-main-content-3">
       <img class="picture-4 bottom-picture" src="assets/images/image-gaming-growth.jpg" alt="">
       <div class="footer-box">
       <p class="number">03</p>
@@ -87,3 +86,9 @@
   </main>
 </body>
 </html>
+
+
+
+
+
+
