--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -31,70 +31,70 @@
 
     <main>
 
-      <div class="photo">
+      <section class="photoandtext">
 
-        <img src="../Project 3/assets/images/image-web-3-mobile.jpg" width="300px" </div>
+        <div class="photo">
+
+          <img src="assets/images/image-web-3-mobile.jpg">
+
+        </div>
+        <div class="title">
+
+          The Bright Future of Web 3.0
+        </div>
+
+        <div class="articletext">
+
+          We dive into the next evolution of the web that claims to put the power of the platforms back into the
+          hands
+          of the people.
+          But is it really fulfilling its promise?
+        </div>
 
 
-        <section class="text">
-
-          <div clas="title">
-
-            The Bright Future of Web 3.0?
-          </div>
-
-          <div class="articletext">
-
-            We dive into the next evolution of the web that claims to put the power of the platforms back into the
-            hands
-            of the people.
-            But is it really fulfilling its promise?
-          </div>
-
-        </section>
 
 
         <div class="button">
           <button> Read more </button>
         </div>
+      </section>
+
+
+      <section class="dark">
+
+
+        <div class="darktitle"> New </div>
 
 
 
-        <section class="dark">
+        <div class="darkdiv">
 
+          <div class="thick"> Hydrogen VS Electric Cars </div>
 
-          <div class="darktitle"> New </div>
+          <div class="darktext"> Will hydrogen-fueled cars ever catch up to EVs?</div>
 
-
-
-          <div class="darkdiv">
-
-            <div class="thick"> Hydrogen VS Electric Cars </div>
-
-            <div class="darktext"> Will hydrogen-fueled cars ever catch up to EVs?</div>
-
-          </div>
+        </div>
 
 
 
-          <div class="darkdiv">
+        <div class="darkdiv">
 
-            <div class="thick"> The Downsides of AI Artistry </div>
+          <div class="thick"> The Downsides of AI Artistry </div>
 
-            <div class="darktext"> What are the possible adverse effects of on-demand AI image generation?</div>
+          <div class="darktext"> What are the possible adverse effects of on-demand AI image generation?</div>
 
-          </div>
+        </div>
 
 
-          <div class="darkdiv">
+        <div class="darkdiv">
 
-            <div class="thick"> Is VC Funding Drying Up? </div>
+          <div class="thick"> Is VC Funding Drying Up? </div>
 
-            <div class="darktext"> Private funding by VC firms is down 50% YOY. We take a look at what that means.</div>
+          <div class="darktext"> Private funding by VC firms is down 50% YOY. We take a look at what that means.</div>
 
-          </div>
+        </div>
 
-        </section>
+      </section>
 
     </main>
 
